--- a/GB/Views/SecuriteUtilisateur/Utilisateur.cshtml
+++ b/GB/Views/SecuriteUtilisateur/Utilisateur.cshtml
@@ -2,6 +2,9 @@
     Layout = null;
 }
 
+<!-- Style de la page -->
+<link href="@Url.Content("~/Resources/css/Views/" + ViewBag.Id_page + ".css")" rel="stylesheet" />
+
 <script type="text/javascript">
 
     $GB_DONNEE = JSON.parse('@Html.Raw(ViewBag.GB_DONNEE)');  
