--- a/GB/Views/SecuriteUtilisateur/Utilisateur/_Modals.cshtml
+++ b/GB/Views/SecuriteUtilisateur/Utilisateur/_Modals.cshtml
@@ -31,33 +31,17 @@
                             <input type="hidden" id="form_id_utilisateur" name="id_utilisateur" value="0" />
 
                             <!-- ligne -->
-                            <div class="col-xs-12 col-lg-4">
+                            <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
                                     <label for="form_compte">@ViewBag.Lang.Login :</label>
                                     <input class="form-control" type="text" id="form_compte" name="compte" placeholder="@ViewBag.Lang.Login .*" required />
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-lg-4">
+                            <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
                                     <label for="form_nom_utilisateur">@ViewBag.Lang.Name :</label>
                                     <input class="form-control" type="text" id="form_nom_utilisateur" name="nom_utilisateur" placeholder="@ViewBag.Lang.Name .*" required />
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-lg-4">
-                                <div class="form-group">
-                                    <label for="form_id_autorite_signature">@ViewBag.Lang.Signing_authority :</label>
-                                    <div class="input-group">
-                                        <span class="input-group-btn">
-                                            <button id="btn_autorite_signature_modal" class="btn btn-default" type="button">
-                                                <i class="fa fa-pencil-square"></i>
-                                            </button>
-                                        </span>
-                                        <!-- id_autorite_signature -->
-                                        <input type="hidden" id="form_id_autorite_signature" name="id_autorite_signature" value="0" />
-                                        <input class="form-control" type="text" id="form_code_autorite_signature" placeholder="@ViewBag.Lang.Signing_authority .*" />
-                                    </div>
                                 </div>
                             </div>
                             <!-- ./ligne -->
@@ -185,43 +169,90 @@
                                 </div>
                             </div>
                             <!-- ./ligne -->
-
+                            
                             <!-- ligne -->
-                            <!-- Libellé du fieldset -->
-                            <div class="col-lg-12">
-                                <legend>
-                                    <i class="fa fa-lock"></i> @ViewBag.Lang.Password
-                                </legend>
+                            <div class="col-lg-8">
+
+                                <div class="row">
+
+                                    <!-- Libellé du fieldset -->
+                                    <div class="col-lg-12">
+                                        <legend>
+                                            <i class="fa fa-lock"></i> @ViewBag.Lang.Password
+                                        </legend>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-3">
+                                        <div class="form-group">
+                                            <label for="form_duree_mot_de_passe">@ViewBag.Lang.Expiration_duration :</label>
+                                            <input class="form-control" type="number" id="form_duree_mot_de_passe" name="duree_mot_de_passe" placeholder="@ViewBag.Lang.Expiration_duration .*" min="1" required />
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-3">
+                                        <div class="form-group">
+                                            <label for="form_modifier_mot_de_passe">@ViewBag.Lang.Activate_edit :</label>
+                                            <select class="form-control" id="form_modifier_mot_de_passe" name="modifier_mot_de_passe" onchange="$('.gb-temp-mot_de_passe').attr('disabled', !($(this).val() === 'True'));" disabled required>
+                                                @Html.Raw(ViewBag.donnee.HTML_Oui_Non)
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-3">
+                                        <div class="form-group">
+                                            <label for="form_mot_de_passe">@ViewBag.Lang.Value :</label>
+                                            <input class="form-control gb-temp-mot_de_passe" type="password" id="form_mot_de_passe" name="mot_de_passe" placeholder="@ViewBag.Lang.Value .*" required />
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-3">
+                                        <div class="form-group">
+                                            <label for="form_mot_de_passe_confirm">@ViewBag.Lang.Confirm :</label>
+                                            <input class="form-control gb-temp-mot_de_passe" type="password" id="form_mot_de_passe_confirm" placeholder="@ViewBag.Lang.Confirm .*" data-parsley-equalto="#form_mot_de_passe" required />
+                                        </div>
+                                    </div>
+
+                                </div>
+
                             </div>
 
-                            <div class="col-xs-12 col-lg-3">
-                                <div class="form-group">
-                                    <label for="form_duree_mot_de_passe">@ViewBag.Lang.Expiration_duration :</label>
-                                    <input class="form-control" type="number" id="form_duree_mot_de_passe" name="duree_mot_de_passe" placeholder="@ViewBag.Lang.Expiration_duration .*" min="1" required />
-                                </div>
-                            </div>
+                            <div class="col-lg-4">
 
-                            <div class="col-xs-12 col-lg-3">
-                                <div class="form-group">
-                                    <label for="form_modifier_mot_de_passe">@ViewBag.Lang.Activate_edit :</label>
-                                    <select class="form-control" id="form_modifier_mot_de_passe" name="modifier_mot_de_passe" onchange="$('.gb-temp-mot_de_passe').attr('disabled', !($(this).val() === 'True'));" disabled required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Oui_Non)
-                                    </select>
-                                </div>
-                            </div>
+                                <div class="row">
 
-                            <div class="col-xs-12 col-lg-3">
-                                <div class="form-group">
-                                    <label for="form_mot_de_passe">@ViewBag.Lang.Value :</label>
-                                    <input class="form-control gb-temp-mot_de_passe" type="password" id="form_mot_de_passe" name="mot_de_passe" placeholder="@ViewBag.Lang.Value .*" required />
-                                </div>
-                            </div>
+                                    <!-- Libellé du fieldset -->
+                                    <div class="col-lg-12">
+                                        <legend>
+                                            <i class="fa fa-lock"></i> @ViewBag.Lang.Signing_authority
+                                        </legend>
+                                    </div>
 
-                            <div class="col-xs-12 col-lg-3">
-                                <div class="form-group">
-                                    <label for="form_mot_de_passe_confirm">@ViewBag.Lang.Confirm :</label>
-                                    <input class="form-control gb-temp-mot_de_passe" type="password" id="form_mot_de_passe_confirm" placeholder="@ViewBag.Lang.Confirm .*" data-parsley-equalto="#form_mot_de_passe" required />
+                                    <!-- id_autorite_signature -->
+                                    <input type="hidden" id="form_id_autorite_signature" name="id_autorite_signature" value="0" />
+
+                                    <div class="col-xs-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label for="form_code_autorite_signature">Code :</label>
+                                            <div class="input-group">
+                                                <span class="input-group-btn">
+                                                    <button id="btn_autorite_signature_modal" class="btn btn-default" type="button">
+                                                        <i class="fa fa-pencil-square"></i>
+                                                    </button>
+                                                </span>
+                                                <input class="form-control" type="text" id="form_code_autorite_signature" placeholder="@ViewBag.Lang.Search_by code .*" />
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xs-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label for="form_libelle_autorite_signature">@ViewBag.Lang.Name :</label>
+                                            <input class="form-control" type="text" id="form_libelle_autorite_signature" placeholder="@ViewBag.Lang.Search_by @((ViewBag.Lang.Name as string).ToLower()) .*" />
+                                        </div>
+                                    </div>
+
                                 </div>
+
                             </div>
                             <!-- .ligne -->
 
@@ -279,86 +310,85 @@
                 </p>
 
                 <!-- Formulaire -->
-                <form method="post" id="form_autorite_signature" name="form" data-parsley-validate>
+                <div class="row">
 
-                    <div class="row">
+                    <!-- ligne -->
+                    <div class="col-lg-12">
+                        <legend>
+                            <i class="fa fa-square"></i> @ViewBag.Lang.Form
+                        </legend>
+                    </div>
+                    <!-- ./ligne -->
 
-                        <!-- ligne -->
-                        <div class="col-lg-12">
-                            <legend>
-                                <i class="fa fa-square"></i> @ViewBag.Lang.Form
-                            </legend>
-                        </div>
-                        <!-- ./ligne -->
-                        <!-- Id -->
-                        <input type="hidden" id="form_autorite_signature_id" name="id" value="0" />
+                    <!-- Ligne -->
+                    <div class="col-lg-6">
+                        <dl class="dl-horizontal">
 
-                        <!-- ligne -->
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_code">Code :</label>
-                                <input class="form-control" type="text" id="form_autorite_signature_code" name="code" placeholder="Code.*" required />
-                            </div>
-                        </div>
+                            <dt>
+                                <span class="pull-left">
+                                    Code :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_code"></dd>
 
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_libelle">@ViewBag.Lang.Name :</label>
-                                <input class="form-control" type="text" id="form_autorite_signature_libelle" name="libelle" placeholder="@ViewBag.Lang.Name .*" required />
-                            </div>
-                        </div>
-                        <!-- ./ligne -->
-                        <!-- ligne -->
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_montant_signature">@ViewBag.Lang.Signing_amount :</label>
-                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_montant_signature" name="montant_signature" placeholder="XXX XXX XXX ..." required />
-                            </div>
-                        </div>
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Signing_amount :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_montant_signature"></dd>
 
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_limite_decouvert_client">@ViewBag.Lang.Customer_overdraft_limit :</label>
-                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_limite_decouvert_client" name="limite_decouvert_client" placeholder="XXX XXX XXX ..." required />
-                            </div>
-                        </div>
-                        <!-- ./ligne -->
-                        <!-- ligne -->
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_debit_max_client">@ViewBag.Lang.Customer_max_debit :</label>
-                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_debit_max_client" name="debit_max_client" placeholder="XXX XXX XXX ..." required />
-                            </div>
-                        </div>
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Customer_max_debit :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_debit_max_client"></dd>
 
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_credit_max_client">@ViewBag.Lang.Customer_max_credit :</label>
-                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_credit_max_client" name="credit_max_client" placeholder="XXX XXX XXX ..." required />
-                            </div>
-                        </div>
-                        <!-- ./ligne -->
-                        <!-- ligne -->
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_montant_max_ligne_credit">@ViewBag.Lang.Line_of_credit_max_amount :</label>
-                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_montant_max_ligne_credit" name="montant_max_ligne_credit" placeholder="XXX XXX XXX ..." required />
-                            </div>
-                        </div>
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Line_of_credit_max_amount :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_montant_max_ligne_credit"></dd>
 
-                        <div class="col-xs-12 col-lg-6">
-                            <div class="form-group">
-                                <label for="form_autorite_signature_montant_limite_pret">@ViewBag.Lang.Loan_limit_amount :</label>
-                                <input class="form-control gb-temp-mask-nombre" type="text" id="form_autorite_signature_montant_limite_pret" name="montant_limite_pret" placeholder="XXX XXX XXX ..." required />
-                            </div>
-                        </div>
-                        <!-- ./ligne -->
-
+                        </dl>
                     </div>
 
-                </form>
+                    <div class="col-lg-6">
+                        <dl class="dl-horizontal">
 
-                <div class="row">
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Name :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_libelle"></dd>
+
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Customer_overdraft_limit :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_limite_decouvert_client"></dd>
+
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Customer_max_credit :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_credit_max_client"></dd>
+
+                            <dt>
+                                <span class="pull-left">
+                                    @ViewBag.Lang.Loan_limit_amount :
+                                </span>
+                            </dt>
+                            <dd id="form_autorite_signature_montant_limite_pret"></dd>
+
+                        </dl>
+                    </div>
+                    <!-- .Ligne -->
 
                     <!-- ligne -->
                     <div class="col-lg-12">
@@ -375,6 +405,7 @@
 
                     <thead class="headings">
                         <tr>
+                            <th class="column-title hidden-lg">Id</th>
                             <th class="column-title">Code</th>
                             <th class="column-title">@ViewBag.Lang.Name</th>
                             <th class="column-title">@ViewBag.Lang.Signing_amount</th>
