--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -111,6 +111,10 @@
     <script src="@Url.Content("~/Resources/js/gb.menu.js")" type="text/javascript"></script>
     <!-- Script de la page -->
     <script src="@Url.Content("~/Resources/js/Views/" + ViewBag.Id_page + ".js")" type="text/javascript"></script>
+    <!-- Intégration de la ressource SignalR -->
+    <script src="@Url.Content("~/Plugins/signalR/scripts/jquery.signalR-2.2.3.min.js")"></script>
+    <script src="~/signalr/hubs"></script>
+    <script src="@Url.Content("~/Plugins/signalR/hub/" + ViewBag.Id_page + ".js")"></script>
 
 </body>
 
