--- a/GB/Views/ConfigurationBudget/DirectionBudget/_Modals.cshtml
+++ b/GB/Views/ConfigurationBudget/DirectionBudget/_Modals.cshtml
@@ -63,19 +63,38 @@
                             <!-- ./ligne -->
 
                             <!-- ligne -->
+                            <div class="col-lg-12">
+                                <legend>
+                                    <i class="fa fa-square"></i> @ViewBag.Lang.Fiscals_exercice
+                                </legend>
+                            </div>
+                            <!-- ./ligne -->
+
+                            <!-- ligne -->
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
-                                    <label for="form_remarque">@ViewBag.Lang.Remark :</label>
-                                    <input class="form-control" type="text" id="form_remarque" name="remarque" placeholder="@ViewBag.Lang.Remark .*" required />
+                                    <label for="form_id_exercice_fiscal">Code :</label>
+                                    <select class="form-control" name="id_exercice_fiscal" id="form_id_exercice_fiscal" onchange="$('#form_libelle_exercice_fiscal').val($('#form_id_exercice_fiscal').val());" required>
+                                        @Html.Raw(ViewBag.donnee.HTML_Select_code_exercice_fiscal)
+                                    </select>
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-lg-6">
                                 <div class="form-group">
-                                    <label for="form_id_exercice_fiscal">Code fiscal :</label>
-                                    <select class="form-control" name="id_exercice_fiscal" id="form_id_exercice_fiscal" required>
-                                        @Html.Raw(ViewBag.donnee.HTML_Select_code_exercice_fiscal)
+                                    <label for="form_libelle_exercice_fiscal">@ViewBag.Lang.Name :</label>
+                                    <select class="form-control" id="form_libelle_exercice_fiscal" onchange="$('#form_id_exercice_fiscal').val($('#form_libelle_exercice_fiscal').val());" required>
+                                        @Html.Raw(ViewBag.donnee.HTML_Select_libelle_exercice_fiscal)
                                     </select>
+                                </div>
+                            </div>
+                            <!-- ./ligne -->
+
+                            <!-- ligne -->
+                            <div class="col-xs-12 col-lg-12">
+                                <div class="form-group">
+                                    <label for="form_remarque">@ViewBag.Lang.Remark :</label>
+                                    <input class="form-control" type="text" id="form_remarque" name="remarque" placeholder="@ViewBag.Lang.Remark .*" required />
                                 </div>
                             </div>
                             <!-- ./ligne -->
