--- a/GB/Views/Securite/Role.cshtml
+++ b/GB/Views/Securite/Role.cshtml
@@ -248,7 +248,7 @@
 
                                             <div class="col-xs-12 col-lg-3">
                                                 <div class="form-group">
-                                                    <select class="form-control" name="id_role" id="form_role_code" onchange="$('#form_role_libelle').val($('#form_role_code').val()); $('.gb-temps-btn-action-menu').prop('disabled', true); $('#form-configuration').submit();" required>
+                                                    <select class="form-control" name="id_role" id="form_id_role" onchange="$('#form_libelle_role').val($(this).val()); $('.gb-temps-btn-action-menu').prop('disabled', true); $('#form-configuration').submit();" required>
                                                         @Html.Raw(ViewBag.donnee.HTML_Select_code_role)
                                                     </select>
                                                 </div>
@@ -256,8 +256,8 @@
 
                                             <div class="col-xs-12 col-lg-3">
                                                 <div class="form-group">
-                                                    <select class="form-control" name="libelle" id="form_role_libelle" onchange="$('#form_role_code').val($('#form_role_libelle').val()); $('.gb-temps-btn-action-menu').prop('disabled', true); $('#form-configuration').submit();" required>
-                                                        @Html.Raw(ViewBag.donnee.HTML_Select_code_libelle)
+                                                    <select class="form-control" name="libelle" id="form_libelle_role" onchange="$('#form_id_role').val($(this).val()); $('.gb-temps-btn-action-menu').prop('disabled', true); $('#form-configuration').submit();" required>
+                                                        @Html.Raw(ViewBag.donnee.HTML_Select_libelle_role)
                                                     </select>
                                                 </div>
                                             </div>
