--- a/GB/Resources/css/gb.style.css
+++ b/GB/Resources/css/gb.style.css
@@ -538,3 +538,8 @@ legend {
 .gb-color-black {
     color: black;
 }
+
+table.dataTable td.focus {
+    outline: 3px solid #3f5367 !important;
+    outline-offset: -1px
+}
