--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -86,10 +86,11 @@
     <script src="@Url.Content("~/Plugins/datatables/datatables/buttons.html5.min.js")"></script>
     <script src="@Url.Content("~/Plugins/datatables/datatables/buttons.print.min.js")"></script>
     <script src="@Url.Content("~/Plugins/datatables/datatables/dataTables.fixedHeader.min.js")"></script>
-    <script src="@Url.Content("~/Plugins/datatables/datatables/dataTables.keyTable.min.js")"></script>
+    <script src="@Url.Content("~/Plugins/datatables/datatables/dataTables.keyTable.2.4.1.min.js")"></script>
     <script src="@Url.Content("~/Plugins/datatables/datatables/dataTables.responsive.min.js")"></script>
     <script src="@Url.Content("~/Plugins/datatables/datatables/responsive.bootstrap.min.js")"></script>
     <script src="@Url.Content("~/Plugins/datatables/datatables/dataTables.scroller.min.js")"></script>
+    <script src="@Url.Content("~/Plugins/datatables/datatables/dataTables.cellEdit.js")"></script>
     <!-- moment -->
     <script src="@Url.Content("~/Plugins/moment/min/moment.min.js")" type="text/javascript"></script>
     <!-- bootstrap-daterangepicker -->
